Добавляет исправления по замечаниям для главной страницы
Добавляет слеш ('/') перед указанием пути к файлу с графикой.
Изменяет разметку разделителя: вместо hr используется div с классом для последующей стилизации.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="page-header">
-      <img class="logo-sedona" src="images/logo-header-sedona.svg" width="140" height="70" alt="Логотип проекта Седона">
+      <img class="logo-sedona" src="/images/logo-header-sedona.svg" width="140" height="70" alt="Логотип проекта Седона">
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item"><a class="navigation-link" href="index.html">Главная</a></li>
@@ -14,8 +14,8 @@
           <li class="navigation-item"><a class="navigation-link" href="catalog.html">Гостиницы</a></li>
         </ul>
         <ul class="navigation-list navigation-user">
-          <li class="navigation-item"><a class="navigation-link" href="index.html"><img src="images/icon-usermenu-search.svg" width="20" height="20" alt="Поиск"></a></li>
-          <li class="navigation-item"><a class="navigation-link" href="index.html"><img src="images/icon-usermenu-bookmark.svg" width="20" height="20" alt="Избранное"></a></li>
+          <li class="navigation-item"><a class="navigation-link" href="index.html"><img src="/images/icon-usermenu-search.svg" width="20" height="20" alt="Поиск"></a></li>
+          <li class="navigation-item"><a class="navigation-link" href="index.html"><img src="/images/icon-usermenu-bookmark.svg" width="20" height="20" alt="Избранное"></a></li>
         </ul>
         <a href="#"><input class="button-primary" type="button" name="button-cta-header" id="button-cta-header" value="ХОЧУ СЮДА!"></a>
       </nav>
@@ -23,7 +23,7 @@
     <main class="main-index">
       <h1 class="visually-hidden">Учебный проект Седона</h1>
       <section class="hero">
-        <img src="images/main/hero-descriptor.svg" width="458" height="352" alt="Добро пожаловать в великолепную Седону. Мы круче Гранд-Каньона!">
+        <img src="/images/main/hero-descriptor.svg" width="458" height="352" alt="Добро пожаловать в великолепную Седону. Мы круче Гранд-Каньона!">
       </section>
       <section class="description">
         <h2>Седона&nbsp;&mdash; небольшой городок в&nbsp;Аризоне,<br>заслуживающий большего!</h2>
@@ -31,47 +31,47 @@
       </section>
       <section class="advantage high-accent">
         <h3>Настоящий<br>городок</h3>
-        <hr class="devider-invert" width="60" size="2" noshade>
+        <div class="divider-invert"></div>
         <p>Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
       </section>
       <section class="advantage img-accent">
-        <img src="images/main/advantages-authentic.jpg" width="800" height="384" alt="Аутентичная атмосфера Дикого Запада">
+        <img src="/images/main/advantages-authentic.jpg" width="800" height="384" alt="Аутентичная атмосфера Дикого Запада">
       </section>
       <section class="advantage low-accent">
         <h3>Небольшая<br>площадь</h3>
-        <hr width="60" size="2" noshade>
+        <div class="divider"></div>
         <p>Все достопримечательности находятся очень близко</p>
       </section>
       <section class="advantage mid-accent">
         <h3>Красивая<br>дорога</h3>
-        <hr width="60" size="2" noshade>
+        <div class="divider"></div>
         <p>Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса совсем не&nbsp;скучно!</p>
       </section>
       <section class="advantage low-accent">
         <h3>Мало<br>туристов</h3>
-        <hr width="60" size="2" noshade>
+        <div class="divider"></div>
         <p>Большинство едет в&nbsp;Гранд Каньон и&nbsp;толпится там</p>
       </section>
       <section class="advantage img-accent">
-        <img src="images/main/advantages-bridge.jpg" width="800" height="384" alt="Впечатляющие панорамы">
+        <img src="/images/main/advantages-bridge.jpg" width="800" height="384" alt="Впечатляющие панорамы">
       </section>
       <section class="advantage high-accent">
         <h3>Там есть<br>мост дьявола</h3>
-        <hr class="devider-invert" width="60" size="2" noshade>
+        <div class="divider-invert"></div>
         <p>Да, по&nbsp;нему можно пройти! Если вы&nbsp;осмелитесь, разумеется</p>
       </section>
       <section class="advantage mid-accent">
-        <img src="images/main/icon-advantages-housing.svg" width="75" height="72" alt="Собирательный образ жилья">
+        <img src="/images/main/icon-advantages-housing.svg" width="75" height="72" alt="Собирательный образ жилья">
         <h3>Жильё</h3>
         <p>Рекомендуем пожить в&nbsp;настоящем мотеле, всё как в&nbsp;кино!</p>
       </section>
       <section class="advantage no-accent">
-        <img src="images/main/icon-advantages-food.svg" width="75" height="72" alt="Собирательный образ еды">
+        <img src="/images/main/icon-advantages-food.svg" width="75" height="72" alt="Собирательный образ еды">
         <h3>Еда</h3>
         <p>Всегда заказывайте топовый фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
       </section>
       <section class="advantage mid-accent">
-        <img src="images/main/icon-advantages-souvenirs.svg" width="75" height="72" alt="Собитрательный образ сувениров">
+        <img src="/images/main/icon-advantages-souvenirs.svg" width="75" height="72" alt="Собитрательный образ сувениров">
         <h3>Сувениры</h3>
         <p>Не&nbsp;только китайского, но&nbsp;и&nbsp;настоящего местного производства!</p>
       </section>
@@ -92,12 +92,12 @@
     <footer class="page-footer">
       <section class="contacts">
         <ul class="socials">
-          <li class="socials-item"><a class="socials-link" href="#"><img src="images/icon-social-vk.svg" width="48" height="41" alt="ВКонтакте"></a></li>
-          <li class="socials-item"><a class="socials-link" href="#"><img src="images/icon-social-telegram.svg" width="48" height="41" alt="Telegram"></a></li>
-          <li class="socials-item"><a class="socials-link" href="#"><img src="images/icon-social-youtube.svg" width="48" height="41" alt="YouTube"></a></li>
+          <li class="socials-item"><a class="socials-link" href="#"><img src="/images/icon-social-vk.svg" width="48" height="41" alt="ВКонтакте"></a></li>
+          <li class="socials-item"><a class="socials-link" href="#"><img src="/images/icon-social-telegram.svg" width="48" height="41" alt="Telegram"></a></li>
+          <li class="socials-item"><a class="socials-link" href="#"><img src="/images/icon-social-youtube.svg" width="48" height="41" alt="YouTube"></a></li>
         </ul>
         <a class="phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        <img class="logo-htmlacademy" src="images/logo-footer-htmlacademy.svg" width="115" height="34" alt="Логотип HTML Академии">
+        <img class="logo-htmlacademy" src="/images/logo-footer-htmlacademy.svg" width="115" height="34" alt="Логотип HTML Академии">
       </section>
     </footer>
   </body>
