--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог гостиниц</title>
+    <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="/styles/styles.css">
   </head>
   <body>
     <header class="page-header">
