--- a/catalog.html
+++ b/catalog.html
@@ -202,12 +202,12 @@
     <footer class="page-footer">
       <section class="contacts">
         <ul class="socials">
-          <li class="socials-item"><a class="socials-link" href="#"><img src="/images/icon-social-vk.svg" width="48" height="41" alt="ВКонтакте"></a></li>
-          <li class="socials-item"><a class="socials-link" href="#"><img src="/images/icon-social-telegram.svg" width="48" height="41" alt="Telegram"></a></li>
-          <li class="socials-item"><a class="socials-link" href="#"><img src="/images/icon-social-youtube.svg" width="48" height="41" alt="YouTube"></a></li>
+          <li class="socials-item"><a class="socials-link" href="https://vk.com/htmlacademy"><img src="/images/icon-social-vk.svg" width="48" height="41" alt="ВКонтакте"></a></li>
+          <li class="socials-item"><a class="socials-link" href="https://t.me/htmlacademy"><img src="/images/icon-social-telegram.svg" width="48" height="41" alt="Telegram"></a></li>
+          <li class="socials-item"><a class="socials-link" href="https://www.youtube.com/user/htmlacademyru"><img src="/images/icon-social-youtube.svg" width="48" height="41" alt="YouTube"></a></li>
         </ul>
         <a class="phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        <img class="logo-htmlacademy" src="/images/logo-footer-htmlacademy.svg" width="115" height="34" alt="Логотип HTML Академии">
+        <a class="logo-htmlacademy" href="https://htmlacademy.ru/"><img src="/images/logo-footer-htmlacademy.svg" width="115" height="34" alt="Логотип HTML Академии"></a>
       </section>
     </footer>
   </body>
