Добавляет базовую стилизацию главной страницы

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </section>
       <section class="advantage high-accent">
         <h3>Настоящий<br>городок</h3>
-        <div class="divider-invert"></div>
+        <div class="divider divider-invert"></div>
         <p>Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
       </section>
       <section class="advantage img-accent">
@@ -59,7 +59,7 @@
       </section>
       <section class="advantage high-accent">
         <h3>Там есть<br>мост дьявола</h3>
-        <div class="divider-invert"></div>
+        <div class="divider divider-invert"></div>
         <p>Да, по&nbsp;нему можно пройти! Если вы&nbsp;осмелитесь, разумеется</p>
       </section>
       <section class="advantage mid-accent">
