Добавляет базовую стилизацию страницы каталога

--- a/catalog.html
+++ b/catalog.html
@@ -190,7 +190,7 @@
             </li>
           </ul>
         </section>
-        <section class="subscribe">
+        <section class="subscribe-catalog">
           <h2>Подпишитесь на рассылку</h2>
           <p>Только полезная информация и&nbsp;никакого спама,<br>честное бойскаутское!</p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="get">
