Добавляет базовую стилизацию кнопок

--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
           <li class="navigation-item"><a class="navigation-link" href="index.html"><img src="/images/icon-usermenu-search.svg" width="20" height="20" alt="Поиск"></a></li>
           <li class="navigation-item"><a class="navigation-link" href="index.html"><img src="/images/icon-usermenu-bookmark.svg" width="20" height="20" alt="Избранное"></a></li>
         </ul>
-        <a href="#"><input class="button-primary" type="button" name="button-cta-header" id="button-cta-header" value="ХОЧУ СЮДА!"></a>
+        <a href="#"><input class="button-primary button-small" type="button" name="button-cta-header" id="button-cta-header" value="Хочу сюда!"></a>
       </nav>
     </header>
     <main class="main-catalog">
@@ -96,8 +96,8 @@
                   </li>
                 </ul>
               </fieldset>
-            <button class="button-secondary" type="submit">ПРИМЕНИТЬ</button>
-            <button class="button-ghost" type="submit">СБРОСИТЬ</button>
+            <button class="button-secondary button-small" type="submit">Применить</button>
+            <button class="button-ghost button-small" type="submit">Сбросить</button>
           </form>
         </section>
         <section class="results">
@@ -120,8 +120,8 @@
                   <dd>От&nbsp;4000&nbsp;₽</dd>
                 </dl>
               </a>
-              <button class="button-primary" type="submit">ПОДРОБНЕЕ</button>
-              <button class="button-secondary" type="submit">В ИЗБРАННОЕ</button>
+              <button class="button-primary button-small" type="submit">Подробнее</button>
+              <button class="button-secondary button-small" type="submit">В избранное</button>
               <img class="rating-visual" src="/images/catalog/icon-rating-4stars.svg" width="140" height="37" alt="Четыре звезды рейтинга">
               <span class="rating-value">Рейтинг: 8,5</span>
             </li>
@@ -134,8 +134,8 @@
                   <dd>От&nbsp;5000&nbsp;₽</dd>
                 </dl>
               </a>
-              <button class="button-primary" type="submit">ПОДРОБНЕЕ</button>
-              <button class="button-secondary" type="submit">В ИЗБРАННОЕ</button>
+              <button class="button-primary button-small" type="submit">Подробнее</button>
+              <button class="button-tertiary button-small" type="submit">В избранном</button>
               <img class="rating-visual" src="/images/catalog/icon-rating-4stars.svg" width="140" height="37" alt="Четыре звезды рейтинга">
               <span class="rating-value">Рейтинг: 9,2</span>
             </li>
@@ -148,8 +148,8 @@
                   <dd>От&nbsp;2500&nbsp;₽</dd>
                 </dl>
               </a>
-              <button class="button-primary" type="submit">ПОДРОБНЕЕ</button>
-              <button class="button-secondary" type="submit">В ИЗБРАННОЕ</button>
+              <button class="button-primary button-small" type="submit">Подробнее</button>
+              <button class="button-secondary button-small" type="submit">В избранное</button>
               <img class="rating-visual" src="/images/catalog/icon-rating-3stars.svg" width="140" height="37" alt="Три звезды рейтинга">
               <span class="rating-value">Рейтинг: 6,9</span>
             </li>
@@ -162,8 +162,8 @@
                   <dd>От&nbsp;1500&nbsp;₽</dd>
                 </dl>
               </a>
-              <button class="button-primary" type="submit">ПОДРОБНЕЕ</button>
-              <button class="button-secondary" type="submit">В ИЗБРАННОЕ</button>
+              <button class="button-primary button-small" type="submit">Подробнее</button>
+              <button class="button-secondary button-small" type="submit">В избранное</button>
               <img class="rating-visual" src="/images/catalog/icon-rating-2stars.svg" width="140" height="37" alt="Две звезды рейтинга">
               <span class="rating-value">Рейтинг: 5,0</span>
             </li>
@@ -195,7 +195,7 @@
           <p>Только полезная информация и&nbsp;никакого спама,<br>честное бойскаутское!</p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="get">
             <input class="subscribe-input" type="text" name="subscribe-email" placeholder="Ваш e-mail">
-            <input class="subscribe-button" type="submit" name="subscribe-submit" value="Подписаться">
+            <input class="button-secondary button-big" type="submit" name="subscribe-submit" value="Подписаться">
           </form>
         </section>
     </main>
