--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li class="navigation-item"><a class="navigation-link" href="index.html"><img src="/images/icon-usermenu-search.svg" width="20" height="20" alt="Поиск"></a></li>
           <li class="navigation-item"><a class="navigation-link" href="index.html"><img src="/images/icon-usermenu-bookmark.svg" width="20" height="20" alt="Избранное"></a></li>
         </ul>
-        <a href="#"><input class="button-primary" type="button" name="button-cta-header" id="button-cta-header" value="ХОЧУ СЮДА!"></a>
+        <a href="#"><input class="button-primary button-small" type="button" name="button-cta-header" id="button-cta-header" value="Хочу сюда!"></a>
       </nav>
     </header>
     <main class="main-index">
@@ -80,14 +80,14 @@
       <section class="cta-main">
         <h2>Заинтересовались?</h2>
         <p>Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
-        <a href="#"><input class="button-primary" type="button" name="button-cta-main" id="button-cta-main" value="ПОИСК ГОСТИНИЦЫ В СЕДОНЕ"></a>
+        <a href="#"><input class="button-primary button-big" type="button" name="button-cta-main" id="button-cta-main" value="Поиск гостиницы в Седоне"></a>
       </section>
       <section class="subscribe">
         <h2>Подпишитесь на рассылку</h2>
         <p>Только полезная информация и&nbsp;никакого спама,<br>честное бойскаутское!</p>
         <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="get">
           <input class="subscribe-input" type="text" name="subscribe-email" placeholder="Ваш e-mail">
-          <input class="subscribe-button" type="submit" name="subscribe-submit" value="Подписаться">
+          <input class="button-secondary button-big" type="submit" name="subscribe-submit" value="Подписаться">
         </form>
       </section>
     </main>
